Still need to fix password error alignment & vertical space

--- a/src/app/pages/auth/landing/landing.page.scss
+++ b/src/app/pages/auth/landing/landing.page.scss
@@ -3,3 +3,28 @@ ion-row{
     align-items: center;
     justify-content: center;
 }
+
+.divider {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: var(--ion-color-medium);
+  font-weight: 500;
+  margin: 1.5rem 0;
+}
+
+.divider::before,
+.divider::after {
+  content: "";
+  flex: 1;
+  border-bottom: 1px solid var(--ion-color-medium);
+  opacity: 0.4;
+}
+
+.divider:not(:empty)::before {
+  margin-right: 0.75em;
+}
+
+.divider:not(:empty)::after {
+  margin-left: 0.75em;
+}
